<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="gambler_pool_list_title">My pools</string>
    <string name="pool_from_layout_creator_title">Pool from layout</string>
    <string name="starting_from_date_text">Starting %1$s</string>
    <string name="choose_pool_layout_text">Choose a template to create your pool</string>
    <string name="pool_name_label">Type the name for the pool</string>
    <string name="fill_pool_fields_title">Fill out the fields to create your pool</string>
    <string name="pool_name_length_validation_error">The pool name must be between 1 and 100 characters</string>
    <string name="ready_to_join_title">You’re invited</string>
    <string name="ready_to_join_subtitle">Jump in and play your predictions alongside others</string>
    <string name="join_pool_action">Join</string>
    <string name="pool_score_empty_list_title">You\'re not in any pools yet</string>
    <string name="pool_score_empty_list_subtitle">Pick a tournament template, create your pool and invite your friends.</string>
    <string name="pool_score_empty_list_templates_section">Popular templates</string>
    <string name="see_all_templates_action">See all templates</string>
    <string name="go_to_my_pools_action">Go to my pools</string>
    <string name="pool_join_requires_sign_in_failure_description">Sign-in required to join</string>
    <string name="pool_join_requires_sign_in_failure_reason">You need to be signed in to open this pool join link</string>
    <string name="pool_join_requires_sign_in_failure_recovery_suggestion">Please sign in and open the link again</string>
    <string name="got_it_action">Got it</string>
    <string name="pool_already_joined_error_description">You’re already in this pool</string>
    <string name="pool_already_joined_failure_reason">Looks like you joined this one before</string>
    <string name="pool_already_joined_recovery_suggestion">Open it from “My pools” to start playing</string>
    <string name="manage_gamblers_edit_action">Edit</string>
    <string name="manage_gamblers_done_action">Done</string>
    <string name="remove_gambler_action">Remove</string>
    <string name="remove_gambler_alert_title">Remove %1$s from this pool?</string>
    <string name="remove_gambler_alert_message">This will remove this gambler from the pool. This action cannot be undone.</string>
    <string name="remove_gambler_failure_title">Couldn’t remove %1$s</string>
    <string name="remove_gambler_failure_message">Check your connection and try again.</string>
    <string name="no_other_gamblers_title">No other gamblers yet</string>
    <string name="no_other_gamblers_message">Once people join this pool, you’ll be able to manage them from here.</string>
    <string name="invite_gamblers_action">Invite gamblers</string>
    <string name="points_text">%1s pts.</string>
    <string name="leaderboard_you">You</string>
    <string name="leaderboard_rank_accessibility">Rank %1$d</string>
    <string name="leaderboard_rank_missing_accessibility">Rank unavailable</string>
    <string name="leaderboard_score_missing_accessibility">Points unavailable</string>
    <string name="leaderboard_movement_unchanged_accessibility">Rank unchanged</string>
    <string name="pool_score_open_accessibility_action">Open pool</string>
    <string name="pool_score_invite_accessibility_action">Invite to pool</string>
    <plurals name="leaderboard_points_accessibility">
        <item quantity="one">%1$d point</item>
        <item quantity="other">%1$d points</item>
    </plurals>
    <plurals name="leaderboard_movement_up_accessibility">
        <item quantity="one">Up %1$d place</item>
        <item quantity="other">Up %1$d places</item>
    </plurals>
    <plurals name="leaderboard_movement_down_accessibility">
        <item quantity="one">Down %1$d place</item>
        <item quantity="other">Down %1$d places</item>
    </plurals>
    <plurals name="gamblers_text">
        <item quantity="one">%1$d member</item>
        <item quantity="other">%1$d members</item>
    </plurals>
    <string name="create_pool_action">Create pool</string>
</resources>
